# Enot_Translator

./: .gitignore  Dockerfile  LICENSE  README.md  constants.py  enot_translator.py  pyproject.toml  requirements.txt  test_enot_translator.py
.github/workflows/: tests.yml
