[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "enot-translator"
version = "1.0.0"
description = "AI-powered book translator using local LLMs via Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "EbookLib>=0.18",
    "beautifulsoup4>=4.12.0",
    "PyQt6>=6.5.0",
]

[project.scripts]
enot-translator = "enot_translator:main"
